--- a/index.html
+++ b/index.html
@@ -98,6 +98,7 @@
 
           <!-- row 2 -->
           <div class="ft-toolbar-row">
+            <div class="ft-spacer"></div> <!-- ô trống dưới Tree -->
             <button class="lb-icon-btn" id="btnLoadFile">Import</button>
             <input type="file" id="FileInput" accept=".ino,.bduino,.xml" hidden>
             <button class="lb-icon-btn" id="btnExportFile">Export</button>
